resolve CA-672: login link not aligned with site

--- a/edrn/theme/browser/stylesheets/edrn-overlay.css
+++ b/edrn/theme/browser/stylesheets/edrn-overlay.css
@@ -14,6 +14,10 @@ td#portal-column-two {
 	padding-top:0px;
 }
 
+div#portal-top {
+	position:relative;
+}
+
 ul#portal-globalnav {
 	padding-bottom:3px;
 	border-bottom: solid 1px black;
@@ -54,7 +58,7 @@ div#portal-breadcrumbs {
 
 div#portal-personaltools-wrapper {
 	position:absolute;
-	top: 150px;
+	top: 80px;
 	right:0px;
 	width: 300px;
 }
